<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.MainDialogCashOut">

    <EditText
        android:id="@+id/etNominal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nominal"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi" />
</LinearLayout>